--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<script src="http://code.jquery.com/jquery.js"/>
-	<title>Gergő "Gery" Balogh</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-</head>
+{% include header.html}
+
 <body>
-	<h1>Hello, world</h1>
+	<h1>Gergő "Gery" Balogh website</h1>
 </body>
 </html>
