--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 {% include header.html %}
 
-<body>
-	<h1>Gergő "Gery" Balogh website</h1>
-</body>
-</html>
+<h1>Gergő "Gery" Balogh website</h1>
+
+{% include footer.html %}
