headers and links

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 ---
 layout: page
 ---
-<h1>Gergő "Gery" Balogh website</h1>
+<img class="me" src="images/geryed.jpeg"/>
+	<h1>Gergő <span class="emph">Gery</span> Balogh</h1>
+	<h2>Ph.D. Student and Software Engineer</h2>
+	<p><a href="https://www.linkedin.com/in/geryxyz/">LinkedIn profile</a></p>
