--- a/content/teaching.html
+++ b/content/teaching.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 ---
+<img class="ico" src="/images/szte.jpg"/>
 
 <h1>Teaching at University of Szeged</h1>
 <h2>Department of Software Engineering</h2>
