--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 ---
-<img class="me" src="images/geryed.jpeg"/>
-	<h1>Gergő <span class="emph">Gery</span> Balogh</h1>
-	<h2>Ph.D. Student and Software Engineer</h2>
-	<p><a href="https://www.linkedin.com/in/geryxyz/">LinkedIn profile</a></p>
+<img class="ico" src="images/geryed.jpeg"/>
+<h1>Gergő <span class="emph">Gery</span> Balogh</h1>
+<h2>Ph.D. Student and Software Engineer</h2>
+<p><a href="https://www.linkedin.com/in/geryxyz/">LinkedIn profile</a></p>
