--- a/index.html
+++ b/index.html
@@ -5,3 +5,4 @@ layout: page
 <h1>Gergő <span class="emph">Gery</span> Balogh</h1>
 <h2>Ph.D. Student and Software Engineer</h2>
 <p><a href="https://www.linkedin.com/in/geryxyz/">LinkedIn profile</a></p>
+<!--<p><span class="quote">"I don't know anything, but I do know that everything is interesting if you go into it deeply enough."</span></p>-->
