add references for CCK

--- a/content/teaching.html
+++ b/content/teaching.html
@@ -17,3 +17,8 @@ layout: page
 <a href="/files/oprend/timelines.pdf">Idővonalak</a>
 <a href="/files/oprend/oprend-virtualizacio.pdf">Virtualizáció</a>
 </p>
+
+<h3>Cikk-Cakk Katica Szakkör</h3>
+<p>
+<a href="/content/cck/index.html">általános iskola 7.-8.</a>
+</p>
