correcting cck link

--- a/content/teaching.html
+++ b/content/teaching.html
@@ -20,5 +20,5 @@ layout: page
 
 <h3>Cikk-Cakk Katica Szakkör</h3>
 <p>
-<a href="/content/cck/index.html">általános iskola 7.-8.</a>
+<a href="/content/cck/index.html" target="_self">általános iskola 7.-8.</a>
 </p>
