refresh links for cck

--- a/content/teaching.html
+++ b/content/teaching.html
@@ -20,5 +20,7 @@ layout: page
 
 <h3>Cikk-Cakk Katica Szakkör</h3>
 <p>
-<a href="/content/cck/index.html" target="_self">általános iskola 7.-8.</a>
+<a href="/content/cck/primary5_6.html" target="_self">általános iskola 5.-6. osztályosok számára</a>
+<a href="/content/cck/primary7_8.html" target="_self">általános iskola 7.-8. osztályosok számára</a>
+<a href="/content/cck/secondary.html" target="_self">középiskolások számára</a>
 </p>
