--- a/content/cck/primary7_8.html
+++ b/content/cck/primary7_8.html
@@ -2,46 +2,98 @@
 layout: course
 ---
 <h1>Cikk-Cakk Katica Szakkör</h1>
-<h2>általános iskola 7.-8. osztály</h2>
+<p>általános iskola 7.-8. osztály</p>
+</p>
 
-<h3>Ismerkedés a Minecraft nyújtotta lehetőségekkel.</h3>
-Fejlesztői világ (játéktér) létrehozása és előkészítése, melyben a közös projekt magvalósítása történik.
-A Minecraft játék világoknak hívja a jétákteret. Ezek alapvetően a valós világ szimulációi. De lehetőséget ad a legtöbb paraméter személyreszabására. A cél hogy a gyerekekben tudatosítsuk, hogy a programozás nem csak a parancsok gépeléséből áll, hanem tudatos tervezésből és előkészületekből.
-<h3>A szakkör keretében megvalósításra kerülő táblás játék kiválasztása és szabályainak felelevenítése, majd megvizsgálása szoftverfejlesztői szemmel.
-Fontos hogy gyerekek maguk válasszák ki a játékot, amit a Minecraft keretein belül fognak elkészíteni. A cél hogy rendszerezzük a játék részeit, ami fejleszti az analítikus gondolkodást és a tervezési készséget.
-<h3>Bevezetés a parancsok/utasítások használatába.
-A gyerekek általában grafikus felületen főleg egérrel végeznek el komplex feladatokat, azonaban ezek mindegyike végrehajtható szöveges utasítások kiadásával, melyek a jelenlegi programozási nyelvek alapjai.
-<h3>A játék grafikus felületének megtervezése: a bábuk létrehozása kézzel.
-A szoftverfejlesztés részét képezi a felhasználói felületek léterhozása, ennek alapelveit (használhatóság, átláthatóság, esztétikus megjelenítés) a gyerekek a játékban elvégzett tervezésen keresztül ismerik meg. A monotonitás megtörése érdekében a GUI tervezést több részre osztjuk és a szárazabb anyagrészek közé ékeljük be.
-Összetett parancsok használata.
-A korábban megismert parancsok mellett további utasításokkal bővítjük a gyerekek eszköztárát, valamint együtt felfedezzük az utasítások szerkezete mögött meghúzódó elveket és rendszert (parancs név, paraméter lista).
-(előző folytatása)
-Az egyszerű elektronikai fogalmak megismerése a Minecraft Redstone-ármakörök segítségével
-Logikai műveletek megismerése
-Logikai műveletek és kapuk használata összetett Redstone-áramkörök létrehozásához
-(előző folytatása)
-Eddig megszerzett tudás ismétlése és gyakorlás
-Bevezetés a 3D koordináta-geometriába
-A Minecraft 3D-s világának manipulálásához (ami a játék célja) szükséges alapvető geometriai ismeretek felfedezése.
-Command block használata
-A forráskódbeli elemi utasítások Minecraft beli megfelelőjének használata, ami később segíti a tanulókat más programozási nyelvek megtanulásában, azt itt megismert analógiák mentén.
-Realatív és abszolút koordináta és elemhivatkozások megértése
-Változók fogalmának megismerése és változók kezelése a Minecraft világában
-A játék grafikus felületének megtervezése: a pálya létrehozása kézzel.
-A cél, hogy a tanulók az új anyagrész elsajátítása előtt lássák annak gyakorlati hasznát. A monotonitás megtörése érdekében a GUI tervezést több részre osztjuk és a szárazabb anyagrészek közé ékeljük be.
-Ismétléses vezérlési szerkezetek megismerése
-Feltételes vezérlési szerkezetek megismerése
-Eddig megszerzett tudás ismétlése és gyakorlás
-Ismétléses és feltételes vezérlési szerkezetek használata a pálya létrehozásához.
-A korábban kézzel megtervezett grafikus felület létrehozása programkód segítségével.
-(előző folytatása)
-A korábban megtervezett bábuk terveinek felülvizsgálata és szükség szerinti módosítása
-Fontos hogy a tanulók megértsék, hogy a programozás nem csak monoton gépelésből áll hanem folyamatos tesztelési és tervezési fázisokból.
-A játék grafikus felületének megtervezése: a bábuk elehejezése a táblán programkód segítségével
-(előző folytatása)
-A bábuk mozgatását végző logika megtervezése, bizonyos játékbeli szabályok figyelembevételével
-(előző folytatása)
-A bábuk mozgatását végző logika megvaslósítása
-(előző folytatása)
-Összefogalalás és ismételés valamint kitekintés az összetettebb technikák felé, mind a Minecraft és mind az egyéb környezetekben.
-Mivel a programfejlesztés sose egy adott techológia és eszköz használatát jelenti, ezért fontos hogy a tanulók lássák, hogy milyen lehetőségek és eszközök állnak rendelkezésre akár a későbbi továbbtanulás céljából is.
+<h2>Ismerkedés a Minecraft nyújtotta lehetőségekkel.</h2>
+<p class="overview"></p>
+
+<h2>Fejlesztői világ (játéktér) létrehozása és előkészítése, melyben a közös projekt magvalósítása történik.</h2>
+<p class="overview">A Minecraft játék világoknak hívja a jétákteret. Ezek alapvetően a valós világ szimulációi. De lehetőséget ad a legtöbb paraméter személyreszabására. A cél hogy a gyerekekben tudatosítsuk, hogy a programozás nem csak a parancsok gépeléséből áll, hanem tudatos tervezésből és előkészületekből.</p>
+
+<h2>A szakkör keretében megvalósításra kerülő táblás játék kiválasztása és szabályainak felelevenítése, majd megvizsgálása szoftverfejlesztői szemmel.</h2>
+<p class="overview">Fontos hogy gyerekek maguk válasszák ki a játékot, amit a Minecraft keretein belül fognak elkészíteni. A cél hogy rendszerezzük a játék részeit, ami fejleszti az analítikus gondolkodást és a tervezési készséget.</p>
+
+<h2>Bevezetés a parancsok/utasítások használatába.</h2>
+<p class="overview">A gyerekek általában grafikus felületen főleg egérrel végeznek el komplex feladatokat, azonaban ezek mindegyike végrehajtható szöveges utasítások kiadásával, melyek a jelenlegi programozási nyelvek alapjai.</p>
+
+<h2>A játék grafikus felületének megtervezése: a bábuk létrehozása kézzel.</h2>
+<p class="overview">A szoftverfejlesztés részét képezi a felhasználói felületek léterhozása, ennek alapelveit (használhatóság, átláthatóság, esztétikus megjelenítés) a gyerekek a játékban elvégzett tervezésen keresztül ismerik meg. A monotonitás megtörése érdekében a GUI tervezést több részre osztjuk és a szárazabb anyagrészek közé ékeljük be.</p>
+
+<h2>Összetett parancsok használata.</h2>
+<p class="overview">A korábban megismert parancsok mellett további utasításokkal bővítjük a gyerekek eszköztárát, valamint együtt felfedezzük az utasítások szerkezete mögött meghúzódó elveket és rendszert (parancs név, paraméter lista).</p>
+
+<h2>(előző folytatása)</h2>
+<p class="overview"></p>
+
+<h2>Az egyszerű elektronikai fogalmak megismerése a Minecraft Redstone-ármakörök segítségével</h2>
+<p class="overview"></p>
+
+<h2>Logikai műveletek megismerése</h2>
+<p class="overview"></p>
+
+<h2>Logikai műveletek és kapuk használata összetett Redstone-áramkörök létrehozásához</h2>
+<p class="overview"></p>
+
+<h2>(előző folytatása)</h2>
+<p class="overview"></p>
+
+<h2>Eddig megszerzett tudás ismétlése és gyakorlás</h2>
+<p class="overview"></p>
+
+<h2>Bevezetés a 3D koordináta-geometriába</h2>
+<p class="overview">A Minecraft 3D-s világának manipulálásához (ami a játék célja) szükséges alapvető geometriai ismeretek felfedezése.</p>
+
+<h2>Command block használata</h2>
+<p class="overview">A forráskódbeli elemi utasítások Minecraft beli megfelelőjének használata, ami később segíti a tanulókat más programozási nyelvek megtanulásában, azt itt megismert analógiák mentén.</p>
+
+<h2>Realatív és abszolút koordináta és elemhivatkozások megértése</h2>
+<p class="overview"></p>
+
+<h2>Változók fogalmának megismerése és változók kezelése a Minecraft világában</h2>
+<p class="overview"></p>
+
+<h2>A játék grafikus felületének megtervezése: a pálya létrehozása kézzel.</h2>
+<p class="overview">A cél, hogy a tanulók az új anyagrész elsajátítása előtt lássák annak gyakorlati hasznát. A monotonitás megtörése érdekében a GUI tervezést több részre osztjuk és a szárazabb anyagrészek közé ékeljük be.</p>
+
+<h2>Ismétléses vezérlési szerkezetek megismerése</h2>
+<p class="overview"></p>
+
+<h2>Feltételes vezérlési szerkezetek megismerése</h2>
+<p class="overview"></p>
+
+<h2>Eddig megszerzett tudás ismétlése és gyakorlás</h2>
+<p class="overview"></p>
+
+<h2>Ismétléses és feltételes vezérlési szerkezetek használata a pálya létrehozásához.</h2>
+<p class="overview"></p>
+
+<h2>A korábban kézzel megtervezett grafikus felület létrehozása programkód segítségével.</h2>
+<p class="overview"></p>
+
+<h2>(előző folytatása)</h2>
+<p class="overview"></p>
+
+<h2>A korábban megtervezett bábuk terveinek felülvizsgálata és szükség szerinti módosítása</h2>
+<p class="overview">Fontos hogy a tanulók megértsék, hogy a programozás nem csak monoton gépelésből áll hanem folyamatos tesztelési és tervezési fázisokból.</p>
+
+<h2>A játék grafikus felületének megtervezése: a bábuk elehejezése a táblán programkód segítségével</h2>
+<p class="overview"></p>
+
+<h2>(előző folytatása)</h2>
+<p class="overview"></p>
+
+<h2>A bábuk mozgatását végző logika megtervezése, bizonyos játékbeli szabályok figyelembevételével</h2>
+<p class="overview"></p>
+
+<h2>(előző folytatása)</h2>
+<p class="overview"></p>
+
+<h2>A bábuk mozgatását végző logika megvaslósítása</h2>
+<p class="overview"></p>
+
+<h2>(előző folytatása)</h2>
+<p class="overview"></p>
+
+<h2>Összefogalalás és ismételés valamint kitekintés az összetettebb technikák felé, mind a Minecraft és mind az egyéb környezetekben.</h2>
+<p class="overview">Mivel a programfejlesztés sose egy adott techológia és eszköz használatát jelenti, ezért fontos hogy a tanulók lássák, hogy milyen lehetőségek és eszközök állnak rendelkezésre akár a későbbi továbbtanulás céljából is.
