cck szakkör cél leírás az ált. 5-6 számára

--- a/content/cck/primary7_8.html
+++ b/content/cck/primary7_8.html
@@ -2,8 +2,8 @@
 layout: course
 ---
 <h1>Cikk-Cakk Katica Szakkör</h1>
-<p>általános iskola 7.-8. osztály</p>
-</p>
+<p class="audience">általános iskola 7.-8. osztály</p>
+<p class="goal"></p>
 
 <h2>Ismerkedés a Minecraft nyújtotta lehetőségekkel.</h2>
 <p class="overview"></p>
