--- a/content/cck/secondary.html
+++ b/content/cck/secondary.html
@@ -2,4 +2,5 @@
 layout: course
 ---
 <h1>Cikk-Cakk Katica Szakkör</h1>
-<h2>középiskola bármelyik osztály</h2>
+<p class="audience">középiskola bármelyik osztály</p>
+<p class="goal"></p>
