--- a/content/cck/primary5_6.html
+++ b/content/cck/primary5_6.html
@@ -2,4 +2,5 @@
 layout: course
 ---
 <h1>Cikk-Cakk Katica Szakkör</h1>
-<h2>általános iskola 5.-6. osztály</h2>
+<p class="audience">általános iskola 5.-6. osztály</p>
+<p class="goal">Analítikus gondolkodás fejlesztése. A diákok egy olyan környezet vizsgálata során ismerik meg a szoftverfejlesztéshez és más természettudományos munka elvégzéséhez szükséges elemző folyamatot. Ez a környezet a Minecraft világ. A világ elemeinek újracsoportosításán és értelmezésén keresztül készítjük elő a későbbi tanulmányaik során elsajátításra kerülő elvont fogalmak megértését. Például az objektumok, tulajdonságok és műveletek. A megszokott tevékenységek során fedezzük fel a szoftverfejlesztéshez szükséges logikus tervezés és szervezett kivitelezés folyamatát. A feladat, hogy túl éljünk és egy lakható, önfentartó és a diákok kreativitását kifejező környezetet alakítsunk ki a világon belül.</p>
