--- a/content/cck/primary7_8.html
+++ b/content/cck/primary7_8.html
@@ -3,97 +3,5 @@ layout: course
 ---
 <h1>Cikk-Cakk Katica Szakkör</h1>
 <p class="audience">általános iskola 7.-8. osztály</p>
-<p class="goal"></p>
+<p class="goal">Analítikus gondolkodás fejlesztése. A diákok egy olyan környezet vizsgálata során ismerik meg a szoftverfejlesztéshez és más természettudományos munka elvégzéséhez szükséges elemző folyamatot. Ez a környezet a Minecraft világ. A világ elemeinek újracsoportosításán és értelmezésén keresztül készítjük elő a későbbi tanulmányaik során elsajátításra kerülő elvont fogalmak megértését. Például az objektumok, tulajdonságok és műveletek. A szakkör keretein belül felhasználjuk, a Minecraft adta lehetőségeket, hogy kezdetleges logikai áramköröket hozzunk létre. Továbbá eszköként használjuk a játék automatizálását és programozhatóságát, hogy egyszerűsítsük az áramkörök létrehozását. A diákok rövid programokat fognak írni, mely előre meghatározott elemeket helyez el a világban.</p>
 
-<h2>Ismerkedés a Minecraft nyújtotta lehetőségekkel.</h2>
-<p class="overview"></p>
-
-<h2>Fejlesztői világ (játéktér) létrehozása és előkészítése, melyben a közös projekt magvalósítása történik.</h2>
-<p class="overview">A Minecraft játék világoknak hívja a jétákteret. Ezek alapvetően a valós világ szimulációi. De lehetőséget ad a legtöbb paraméter személyreszabására. A cél hogy a gyerekekben tudatosítsuk, hogy a programozás nem csak a parancsok gépeléséből áll, hanem tudatos tervezésből és előkészületekből.</p>
-
-<h2>A szakkör keretében megvalósításra kerülő táblás játék kiválasztása és szabályainak felelevenítése, majd megvizsgálása szoftverfejlesztői szemmel.</h2>
-<p class="overview">Fontos hogy gyerekek maguk válasszák ki a játékot, amit a Minecraft keretein belül fognak elkészíteni. A cél hogy rendszerezzük a játék részeit, ami fejleszti az analítikus gondolkodást és a tervezési készséget.</p>
-
-<h2>Bevezetés a parancsok/utasítások használatába.</h2>
-<p class="overview">A gyerekek általában grafikus felületen főleg egérrel végeznek el komplex feladatokat, azonaban ezek mindegyike végrehajtható szöveges utasítások kiadásával, melyek a jelenlegi programozási nyelvek alapjai.</p>
-
-<h2>A játék grafikus felületének megtervezése: a bábuk létrehozása kézzel.</h2>
-<p class="overview">A szoftverfejlesztés részét képezi a felhasználói felületek léterhozása, ennek alapelveit (használhatóság, átláthatóság, esztétikus megjelenítés) a gyerekek a játékban elvégzett tervezésen keresztül ismerik meg. A monotonitás megtörése érdekében a GUI tervezést több részre osztjuk és a szárazabb anyagrészek közé ékeljük be.</p>
-
-<h2>Összetett parancsok használata.</h2>
-<p class="overview">A korábban megismert parancsok mellett további utasításokkal bővítjük a gyerekek eszköztárát, valamint együtt felfedezzük az utasítások szerkezete mögött meghúzódó elveket és rendszert (parancs név, paraméter lista).</p>
-
-<h2>(előző folytatása)</h2>
-<p class="overview"></p>
-
-<h2>Az egyszerű elektronikai fogalmak megismerése a Minecraft Redstone-ármakörök segítségével</h2>
-<p class="overview"></p>
-
-<h2>Logikai műveletek megismerése</h2>
-<p class="overview"></p>
-
-<h2>Logikai műveletek és kapuk használata összetett Redstone-áramkörök létrehozásához</h2>
-<p class="overview"></p>
-
-<h2>(előző folytatása)</h2>
-<p class="overview"></p>
-
-<h2>Eddig megszerzett tudás ismétlése és gyakorlás</h2>
-<p class="overview"></p>
-
-<h2>Bevezetés a 3D koordináta-geometriába</h2>
-<p class="overview">A Minecraft 3D-s világának manipulálásához (ami a játék célja) szükséges alapvető geometriai ismeretek felfedezése.</p>
-
-<h2>Command block használata</h2>
-<p class="overview">A forráskódbeli elemi utasítások Minecraft beli megfelelőjének használata, ami később segíti a tanulókat más programozási nyelvek megtanulásában, azt itt megismert analógiák mentén.</p>
-
-<h2>Realatív és abszolút koordináta és elemhivatkozások megértése</h2>
-<p class="overview"></p>
-
-<h2>Változók fogalmának megismerése és változók kezelése a Minecraft világában</h2>
-<p class="overview"></p>
-
-<h2>A játék grafikus felületének megtervezése: a pálya létrehozása kézzel.</h2>
-<p class="overview">A cél, hogy a tanulók az új anyagrész elsajátítása előtt lássák annak gyakorlati hasznát. A monotonitás megtörése érdekében a GUI tervezést több részre osztjuk és a szárazabb anyagrészek közé ékeljük be.</p>
-
-<h2>Ismétléses vezérlési szerkezetek megismerése</h2>
-<p class="overview"></p>
-
-<h2>Feltételes vezérlési szerkezetek megismerése</h2>
-<p class="overview"></p>
-
-<h2>Eddig megszerzett tudás ismétlése és gyakorlás</h2>
-<p class="overview"></p>
-
-<h2>Ismétléses és feltételes vezérlési szerkezetek használata a pálya létrehozásához.</h2>
-<p class="overview"></p>
-
-<h2>A korábban kézzel megtervezett grafikus felület létrehozása programkód segítségével.</h2>
-<p class="overview"></p>
-
-<h2>(előző folytatása)</h2>
-<p class="overview"></p>
-
-<h2>A korábban megtervezett bábuk terveinek felülvizsgálata és szükség szerinti módosítása</h2>
-<p class="overview">Fontos hogy a tanulók megértsék, hogy a programozás nem csak monoton gépelésből áll hanem folyamatos tesztelési és tervezési fázisokból.</p>
-
-<h2>A játék grafikus felületének megtervezése: a bábuk elehejezése a táblán programkód segítségével</h2>
-<p class="overview"></p>
-
-<h2>(előző folytatása)</h2>
-<p class="overview"></p>
-
-<h2>A bábuk mozgatását végző logika megtervezése, bizonyos játékbeli szabályok figyelembevételével</h2>
-<p class="overview"></p>
-
-<h2>(előző folytatása)</h2>
-<p class="overview"></p>
-
-<h2>A bábuk mozgatását végző logika megvaslósítása</h2>
-<p class="overview"></p>
-
-<h2>(előző folytatása)</h2>
-<p class="overview"></p>
-
-<h2>Összefogalalás és ismételés valamint kitekintés az összetettebb technikák felé, mind a Minecraft és mind az egyéb környezetekben.</h2>
-<p class="overview">Mivel a programfejlesztés sose egy adott techológia és eszköz használatát jelenti, ezért fontos hogy a tanulók lássák, hogy milyen lehetőségek és eszközök állnak rendelkezésre akár a későbbi továbbtanulás céljából is.
