cck ált. iskola részek kidolgozásának elkezdése

--- a/content/cck/primary7_8.html
+++ b/content/cck/primary7_8.html
@@ -5,3 +5,5 @@ layout: course
 <p class="audience">általános iskola 7.-8. osztály</p>
 <p class="goal">Analítikus gondolkodás fejlesztése. A diákok egy olyan környezet vizsgálata során ismerik meg a szoftverfejlesztéshez és más természettudományos munka elvégzéséhez szükséges elemző folyamatot. Ez a környezet a Minecraft világ. A világ elemeinek újracsoportosításán és értelmezésén keresztül készítjük elő a későbbi tanulmányaik során elsajátításra kerülő elvont fogalmak megértését. Például az objektumok, tulajdonságok és műveletek. A szakkör keretein belül felhasználjuk, a Minecraft adta lehetőségeket, hogy kezdetleges logikai áramköröket hozzunk létre. Továbbá eszköként használjuk a játék automatizálását és programozhatóságát, hogy egyszerűsítsük az áramkörök létrehozását. A diákok rövid programokat fognak írni, mely előre meghatározott elemeket helyez el a világban.</p>
 
+<h2>Ismerkedés a Minecraft nyújtotta lehetőségekkel.</h2>
+<p class="overview"></p>
