--- a/content/teaching.html
+++ b/content/teaching.html
@@ -25,3 +25,8 @@ layout: page
 <a href="/content/cck/primary7_8.html" target="_self">általános iskola 7.-8. osztályosok számára</a>
 <a href="/content/cck/secondary.html" target="_self">középiskolások számára</a>
 </p>
+
+<h3>Rendszerfejlesztés 2. gyakorlat</h3>
+<p>
+<a href="https://drive.google.com/open?id=12tNBhCIo9Ef22xQwhGzDWS2Fv_UeAbZ3">2018 diasorok</a>
+</p>
