consulting hours added

--- a/content/teaching.html
+++ b/content/teaching.html
@@ -6,6 +6,8 @@ layout: page
 <h1>Teaching at University of Szeged</h1>
 <h2>Department of Software Engineering</h2>
 
+<p><span class="emph">Consulting hours:</span> Wednesday 15:00, in Department of Software Engineering (Dugonics tér 13.) Office 138</p>
+
 <h3>Operation systems in school - Operációs rendszerek az iskolában (2017-2018 fall/ősz)</h3>
 <p>
 <a href="/files/oprend/oprend-2017.pdf">Követlemények</a>
@@ -18,7 +20,7 @@ layout: page
 <a href="/files/oprend/oprend-virtualizacio.pdf">Virtualizáció</a>
 </p>
 
-</br>
+<br/>
 <h3>Cikk-Cakk Katica Szakkör</h3>
 <p>
 <a href="/content/cck/primary5_6.html" target="_self">általános iskola 5.-6. osztályosok számára</a>
@@ -29,4 +31,9 @@ layout: page
 <h3>Rendszerfejlesztés 2. gyakorlat</h3>
 <p>
 <a href="https://drive.google.com/open?id=12tNBhCIo9Ef22xQwhGzDWS2Fv_UeAbZ3">2018 diasorok</a>
+</p>
+
+<h3>Szkriptnyelvek</h3>
+<p>
+
 </p>
