--- a/content/teaching.html
+++ b/content/teaching.html
@@ -7,7 +7,7 @@ layout: page
 <h2>Department of Software Engineering</h2>
 
 <h3>Consulting hours</h3>
-<p><span class="emph">Time:</span> Wednesday 15:00<br/>
+<p><span class="emph">Time:</span> Wednesday, 15:00-16:30<br/>
 <span class="emph">Location:</span> Department of Software Engineering (Dugonics tér 13.) Office 138</p>
 
 <h3>Operation systems in school - Operációs rendszerek az iskolában (2017-2018 fall/ősz)</h3>
