--- a/content/teaching.html
+++ b/content/teaching.html
@@ -6,9 +6,9 @@ layout: page
 <h1>Teaching at University of Szeged</h1>
 <h2>Department of Software Engineering</h2>
 
-<h3>Consulting hours</h3>
-<p><span class="emph">Time:</span> Wednesday, 15:00-16:30<br/>
-<span class="emph">Location:</span> Department of Software Engineering (Dugonics tér 13.) Office 138</p>
+<h3>Consulting hours - Fogadó órák</h3>
+<p><span class="emph">Time - időpont:</span> Wednesday - szerda, 15:00-16:30<br/>
+<span class="emph">Location - helyszín:</span> Department of Software Engineering (Dugonics tér 13.) Office 138 - Szoftverfejlesztés tanszék (Dugonics tér 13.) 138-as iroda</p>
 
 <h3>Operation systems in school - Operációs rendszerek az iskolában (2017-2018 fall/ősz)</h3>
 <p>
