graph db course added

--- a/content/teaching.html
+++ b/content/teaching.html
@@ -30,6 +30,11 @@ layout: page
 <a href="/content/cck/secondary.html" target="_self">középiskolások számára</a>
 </p>
 
+<h3>PGP - Python, Gráfok, Programozás</h3>
+<p>
+<a href="/content/pgp/secondary.html" target="_self">középiskolások számára</a>
+</p>
+
 <h3>Rendszerfejlesztés 2. gyakorlat</h3>
 <p>
 <a href="https://drive.google.com/open?id=12tNBhCIo9Ef22xQwhGzDWS2Fv_UeAbZ3">2018 diasorok</a>
