source code introduction

--- a/content/pgp/secondary.html
+++ b/content/pgp/secondary.html
@@ -15,7 +15,18 @@ Gráfelméleti alapfogalmak bevezetése.
     <li>kapcsolatok leírása gráfként</li>
     <li>irányítás</li>
     <li>él-súlyok</li>
-    <li>csomópont tulajdonságok</li>
-    <li>él tulajdonságok</li>
+    <li>csomópont-tulajdonságok</li>
+    <li>él-tulajdonságok</li>
+  </ul>
+</p>
+
+<h2>Mi az a forráskód?</h2>
+<p class="overview">
+Programozási alapfogalmak és algoritmizálás bevezetése.
+  <ul>
+    <li>utasítások: paraméterek és visszatérési érték</li>
+    <li>változók: egyszerű és összetett típusok</li>
+    <li>feltételes vezérlési szerkezetek</li>
+    <li>ismétléses vezérlési szerkezetek</li>
   </ul>
 </p>
