project kickoff skeleton

--- a/content/pgp/secondary.html
+++ b/content/pgp/secondary.html
@@ -30,3 +30,16 @@ Programozási alapfogalmak és algoritmizálás bevezetése.
     <li>ismétléses vezérlési szerkezetek</li>
   </ul>
 </p>
+
+<h2>Projekt kick-off</h2>
+<p class="overview">
+Megvalósítandó projekt kiválasztása
+  <ul>
+    <li>Facebook Places Graph https://developers.facebook.com/docs/places</li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+</p>
