--- a/content/pgp/secondary-halfyear.html
+++ b/content/pgp/secondary-halfyear.html
@@ -1,7 +1,7 @@
 ---
 layout: course
 ---
-<h1>Python, Gráf, Programozás</h1>
+<h1>Python, Gráf, Programozás (fél éves)</h1>
 <p class="audience">középiskola bármelyik osztály</p>
 <p class="goal">Gráf alapú adattárolás és programozási alapismeretek</br>
 Az szoftverfejlesztés során fontos készség az elvont adatstruktúrák megértése, tervezése és kezelése. Az egyik ilyen alapvető adatstruktúra a gráf, melyet számtalan rendszer használ információ rövid vagy hosszútávú tárolására és az entitások közötti kapcsolatok jelölésére. 
