--- a/content/pgp/secondary-2h.html
+++ b/content/pgp/secondary-2h.html
@@ -54,7 +54,7 @@ Online angol nyelvű oktató anyag elérhető a <a href="https://guides.neo4j.co
   <li>hasonlóság fogalma és kiszámítása</li>
   <li>szomszédos csomópontok (filmek) hasonlósága saját preferenciával (Jaccard)
     <ul>
-      <li><p class="code">
+      <li><details><summary>megoldás</summary><p class="code">
         MATCH (m:Movie {title: "Inception"})-[:IN_GENRE]->(g:Genre)<-[:IN_GENRE]-(other:Movie)<br/>
         WITH m, other, COUNT(g) AS intersection, COLLECT(g.name) AS i<br/>
         MATCH (m)-[:IN_GENRE]->(mg:Genre)<br/>
@@ -67,7 +67,7 @@ Online angol nyelvű oktató anyag elérhető a <a href="https://guides.neo4j.co
         WITH m,other,intersection,s1+filter(x IN s2 WHERE NOT x IN s1) AS union, s1, s2<br/>
         <br/>
         RETURN m.title, other.title, s1,s2,((1.0*intersection)/SIZE(union)) AS jaccard ORDER BY jaccard DESC LIMIT 100<br/>
-        </p></li>
+        </p></details></li>
       <li>általános metszet: <a href="https://neo4j.com/developer/kb/performing-match-intersection/">Performing match intersection</a></li>
     </ul>
   </li>
