--- a/content/teaching.html
+++ b/content/teaching.html
@@ -10,16 +10,10 @@ layout: page
 <p><span class="emph">Time - időpont:</span> Wednesday - szerda, 15:00-16:30<br/>
 <span class="emph">Location - helyszín:</span> Department of Software Engineering (Dugonics tér 13.) Office 138 - Szoftverfejlesztés tanszék (Dugonics tér 13.) 138-as iroda</p>
 
-<h3>Operation systems in school - Operációs rendszerek az iskolában (2017-2018 fall/ősz)</h3>
+<h3>Operation systems in school - Operációs rendszerek az iskolában</h3>
 <p>
 <a href="/files/oprend/oprend-2017.pdf">Követlemények</a>
-<a href="/files/oprend/utemterv.pdf">Ütemterv</a>
-</p>
-<p>
-<a href="/files/oprend/linux.pdf">Leírás a Linux-ról</a>
-<a href="/files/oprend/hisotry.pdf">Informatika történelme</a>
-<a href="/files/oprend/timelines.pdf">Idővonalak</a>
-<a href="/files/oprend/oprend-virtualizacio.pdf">Virtualizáció</a>
+<a href="/content/os-in-school/university.html">Ütemterv és tananyag</a>
 </p>
 
 <br/>
