--- a/content/pgp/secondary-4h.html
+++ b/content/pgp/secondary-4h.html
@@ -170,9 +170,13 @@ return liked, other, intersection, both, (size(intersection)*1.0)/(size(both)*1.
 order by jaccard desc limit 10
 </pre>
 
-<hr/>
-
 <h1>2. foglalkozás</h1>
+
+<h2>Függőségek</h2>
+<pre>
+easy_install colorama
+easy_install neo4j-driver
+</pre>
 
 <h2>Mi az a szkript nyelv?</h2>
 <p>Python alapok</p>
@@ -266,6 +270,146 @@ order by jaccard desc limit 10
 
 <h3>Beégetett ajánlás megvalósítása</h3>
 
+<p>Mellyek az Inception műfajai?</p>
+<pre class="code">
+def get_liked_genre():
+  query = '''
+  match (liked:Movie {title: "Inception"})-[:IN_GENRE]->(likedGenre:Genre)
+  return likedGenre.name as name
+  '''
+  names = []
+  for record in session.run(query):
+    names.append(record['name'])
+  return names
+</pre>
+
+<p>Keressük ki a filmek műfajait!</p>
+
+<pre>
+def get_movies():
+  query = '''
+  match (m:Movie)
+  return m.title as title
+  '''
+  titles = []
+  for record in session.run(query):
+    titles.append(record['title'])
+  return titles
+
+def get_genre_of(title):
+  query = '''
+  match (liked:Movie {title: $title})-[:IN_GENRE]->(likedGenre:Genre)
+  return likedGenre.name as name
+  '''
+  names = []
+  for record in session.run(query, parameters={'title': title}):
+    names.append(record['name'])
+  return names
+</pre>
+
+<img src="/content/pgp/paramter-python-cyper.png"/>
+
+<p>Refactoring - egyszerűsítsük a kódot</p>
+
+<pre class="code">
+def getAll(query, property, parameters={}):
+  values = []
+  for record in session.run(query, parameters=parameters):
+    values.append(record[property])
+  return values
+
+def get_liked_genre():
+  return get_genre_of('Inception')
+
+def get_movies():
+  query = '''
+  match (m:Movie)
+  return m.title as title
+  '''
+  return getAll(query, 'title')
+
+def get_genre_of(title):
+  query = '''
+  match (liked:Movie {title: $title})-[:IN_GENRE]->(likedGenre:Genre)
+  return likedGenre.name as name
+  '''
+  return getAll(query, 'name', parameters={'title': title})
+</pre>
+
+<p>Hasonlóság kiszámítása</p>
+
+<pre class="code">
+def jaccard():
+  likedGenres = set(get_liked_genre())
+  similarMovies = []
+  for title in get_movies()[:10]:
+    otherGenres = set(get_genre_of(title))
+    intersection = likedGenres & otherGenres
+    union = likedGenres | otherGenres
+    similarity = len(intersection) / len(union)
+    entry = (title, similarity)
+    similarMovies.append(entry)
+  return similarMovies
+</pre>
+
+<p>Optimalizálás - gyorsítsuk fel a kódot</p>
+
+<pre class="code">
+def jaccard_slow():
+  likedGenres = set(get_liked_genre())
+  similarMovies = []
+  for title in get_movies()[:50]:
+    otherGenres = set(get_genre_of(title))
+    intersection = likedGenres & otherGenres
+    union = likedGenres | otherGenres
+    similarity = len(intersection) / len(union)
+    entry = (title, similarity)
+    info("similarity of %s is %f" % entry)
+    similarMovies.append(entry)
+  return similarMovies
+
+def jaccard():
+  similarMovies = []
+  for db_entry in list(get_sets())[:50]:
+    likedGenres = set(db_entry['likedGenres'])
+    otherGenres = set(db_entry['otherGenres'])
+    otherTitle = db_entry['other']
+    intersection = likedGenres & otherGenres
+    union = likedGenres | otherGenres
+    similarity = len(intersection) / len(union)
+    item = (otherTitle, similarity)
+    info("similarity of %s is %f" % item)
+    similarMovies.append(item)
+  return similarMovies
+</pre>
+
+<p>Melyik filmet nézzem legközelebb?</p>
+
+<pre class="code">
+def jaccard():
+  similarMovies = []
+  for db_entry in get_sets():
+    likedGenres = set(db_entry['likedGenres'])
+    otherGenres = set(db_entry['otherGenres'])
+    otherTitle = db_entry['other']
+    intersection = likedGenres & otherGenres
+    union = likedGenres | otherGenres
+    similarity = len(intersection) / len(union)
+    item = (otherTitle, similarity)
+    #info("similarity of %s is %f" % item)
+    similarMovies.append(item)
+  return similarMovies
+
+def recommend():
+  similarMovies = jaccard()
+  similarMovies.sort(key=lambda entry: entry[1], reverse=True)
+  return similarMovies[:10]
+
+if __name__ == '__main__':
+  info("The top 10 movies you should watch:")
+  for i, entry in enumerate(recommend()):
+    info("   %dth %s" % (i+1, entry[0]))
+</pre>
+
 <h3>Paraméteres ajánlás megvalósítása</h3>
 
-<h4></h4>
