testing syntax highlight

--- a/content/pgp/secondary-4h.html
+++ b/content/pgp/secondary-4h.html
@@ -200,7 +200,7 @@ easy_install neo4j-driver
 [:]  
 </pre>
 
-<pre class="code">
+<pre class="code"><code class="python">
 import pdb
 
 def annotated(text, icon=''):
@@ -222,7 +222,7 @@ def question(text):
 
 if __name__ == '__main__':
   pdb.set_trace()  
-</pre>
+</code></pre>
 
 <p>üzenetek szinezése <a href="https://pypi.org/project/colorama/">colorama modullal</a></p>
 
