--- a/content/pgp/secondary-4h.html
+++ b/content/pgp/secondary-4h.html
@@ -285,7 +285,7 @@ def get_liked_genre():
 
 <p>Keressük ki a filmek műfajait!</p>
 
-<pre><code class="python">
+<pre class="code"><code class="python">
 def get_movies():
   query = '''
   match (m:Movie)
