OIS: structure of first session

--- a/content/os-in-school/university.html
+++ b/content/os-in-school/university.html
@@ -1,22 +1,20 @@
 ---
 layout: course
 ---
-<h1>Operációs rendszerek az iskolában</h1>
+<h1>Operációs rendszerek az iskolában (1 + 2 óra / hét, 14 hét)</h1>
 <p class="audience">egyetemi hallgatók</p>
 <p class="goal"></p>
 
-<h2>Számítástechnika és operációs rendszerek története (45 min)</h2>
-<p class="overview"></p>
+<h2>Előadás: <a href="history-of-os.html">Számítástechnika és operációs rendszerek története</a> (45 min)</h2>
+<!--<p class="overview"></p>
 <ul>
 	<li>hisotry.pdf</li>
 	<li>timelines.pptx</li>
-</ul>
-<h3>Gyakorlat: Követlemények és bevezetés (20 min)</h3>
-<ul>
-	<li>oprend-2017.pdf</li>
-</ul>
+</ul>-->
+<h3>Gyakorlat: <a href="files/oprend/requirements.pdf">Követlemények és bevezetés</a> (30 min)</h3>
+<h3>Gyakorlat: <a href="partition.html">Particionálás alapjai és elmélete</a> (45 min)</h3>
 
-<h2>Virtualizáció</h2>
+<!--<h2>Virtualizáció</h2>
 <p class="overview"></p>
 <ul>
 	<li>oprendvirtualizacio.pptx</li>
@@ -36,7 +34,7 @@ layout: course
 
 <h2>Microsoft operációs rendszerek története (45 min)</h2>
 <p class="overview"></p>
-<h3>Gyakorlat: Windows 10+ telepítés elkezdése (45 min)</h3>
+<h3>Gyakorlat: Windows 10+ telepítés (45 min)</h3>
 <ul>
 	<li>telepítő pendrive készítése</li>
 	<li>boot-olás pendriveról</li>
@@ -63,4 +61,4 @@ layout: course
 	<li>Arduino</li>
 	<li>NodeMCU</li>
 </ul>
-<h3>Gyakorlat: Konzultáció és Microvezérlők</h3>
+<h3>Gyakorlat: Konzultáció és Microvezérlők</h3>-->
