--- a/content/os-in-school/university.html
+++ b/content/os-in-school/university.html
@@ -5,14 +5,14 @@ layout: course
 <p class="audience">egyetemi hallgatók</p>
 <p class="goal"></p>
 
-<h2>Előadás: <a href="history-of-os.html">Számítástechnika és operációs rendszerek története</a> (45 min)</h2>
+<h2>Előadás: <a href="history-of-os.html" target="_self">Számítástechnika és operációs rendszerek története</a> (45 min)</h2>
 <!--<p class="overview"></p>
 <ul>
 	<li>hisotry.pdf</li>
 	<li>timelines.pptx</li>
 </ul>-->
 <h3>Gyakorlat: <a href="/files/oprend/requirements.pdf">Követlemények és bevezetés</a> (30 min)</h3>
-<h3>Gyakorlat: <a href="partition.html">Particionálás alapjai és elmélete</a> (45 min)</h3>
+<h3>Gyakorlat: <a href="partition.html" target="_self">Particionálás alapjai és elmélete</a> (45 min)</h3>
 
 <!--<h2>Virtualizáció</h2>
 <p class="overview"></p>
