--- a/content/os-in-school/partition.html
+++ b/content/os-in-school/partition.html
@@ -23,6 +23,9 @@ layout: course
 <h4>A superblock</h4>
 <p>Alapvető adatokat tárol a fájlrendszerről: varázs szám, verzió, csatolás számláló, blokk méret, szabad blokkok és inode-ok száma, blokkok és inode-ok száma.</p>
 
+<h3>Töredezettség mentesítés</h3>
+<p>Használjuk a <a href="https://www.ccleaner.com/defraggler/download/portable">Defraggler</a>-t.</p>
+
 <h2>Miért jó több partíciót is létre hozni?</h2>
 <p>Forrás: <a href="https://gparted.org/why-partition.php">Why Partition your Disk Device?</a></p>
 <h3>Teljesítmény növelése</h3>
