definition of os

--- a/content/os-in-school/history-of-os.html
+++ b/content/os-in-school/history-of-os.html
@@ -2,3 +2,46 @@
 layout: course
 ---
 <h1>Számítástechnika és operációs rendszerek története</h1>
+
+<h2>Operációs rendszerek feladatai</h2>
+<img src="operating_system.png" style="width: 30%"/>
+<ul>
+	<li>alapvető (egységes) szolgáltatások biztosítása a programok felé</li>
+	<li>komunikáció a hardware és a szoftware között</li>
+	<li>felhasználói felület biztosítása</li>
+</ul>
+
+<h2>Az operációs rendszer részei</h2>
+<p>Forrás: <a href="https://en.wikipedia.org/wiki/Operating_system#Components">Wikipedia: Operating system</a></p>
+<h3>Kernel</h3>
+<p>Alapvető vezérlés biztosítása a hardware felett a frimware és eszköz driver-ek segítségével.</p>
+<ul>
+	<li>Program végrehajtás</li>
+	<li>Megszakítások kezelése: környezettel való kommunikáció</li>
+	<li>CPU módok kezelése</li>
+	<li>Memória kezelés</li>
+	<li>Virtuális memória kezelés</li>
+	<li>Párhuzamosítás (Multitasking)</li>
+	<li>Meghajtókon lévő tárhely kezelése</li>
+	<li>Perifériák kezelése</li>
+</ul>
+
+<h3>Hálózat kezelés</h3>
+<p>Komunikáció más számítógépekkel.</p>
+
+<h3>Biztonság és biztonságosság</h3>
+<p>Ne történjen szándékos károkozás. Ne történjen véletlen meghibásodás.</p>
+
+<h3>Felhasználói felület</h3>
+<p>Komunikáció biztosítása a számítógép (hardware és szoftware) és a felhasználó között. Lehet grafikus vagy szöveges felület.</p>
+
+<h2>Történeti áttekintés</h2>
+<h3>Mainframes</h3>
+<p>Nincs operációs rendszer, a felhasználók és programok közvetlenül kezelik a hardware-t.</p>
+
+<h3>Mini-számítógépek (1960)</h3>
+<p>Hardware specifikus operációs rendszerek.</p>
+<p>Unix (1960) első verziója az első széles körben elterjedt operációs rendszerek egyike.</p>
+
+<h3>Micro-számítógépek (1970)</h3>
+
