os histroy final

--- a/content/os-in-school/history-of-os.html
+++ b/content/os-in-school/history-of-os.html
@@ -44,4 +44,8 @@ layout: course
 <p>Unix (1960) első verziója az első széles körben elterjedt operációs rendszerek egyike.</p>
 
 <h3>Micro-számítógépek (1970)</h3>
-
+<p>Otthoni számítógépek elterjedése pl.: Commodore 64, Apple II sorozat. 8-bites számítógépek, 4-8 KB memória.</p>
+<p>Operációs rendszerekkel rendelkező videó játékok és konzolok, pl.: Xbox. 1970-1990-es évekeben a videó játékok leginkább a BIOS funkcióira támaszkodtak, míg a PlayStation korától egyre inkább megjelentek a saját operációs rendszerrel rendelkező gépek.</p>
+<p>Az első IBM-PC 1981-ben került bemutatásra. Olcsó grafikus rendszerek megjelenése is erre a korra tehető, Pl.: X Window System (Unix), macOS (Apple), Windows (Microsoft).</p>
+<p>Az opreációs rendszerek elterjedése a személyi számítógépekkel 1990-es évektől kezdődött.</p>
+<p>Ezzel közel egyidőben megkezdőtt a mobil operációs rendszerek kora is: 1996, Palm OS; 2000, WindowsCE; 2003, Windows Mobile; 2007, iOS; 2008, Android.</p>
