computer managment added

--- a/content/os-in-school/partition.html
+++ b/content/os-in-school/partition.html
@@ -3,6 +3,8 @@ layout: course
 ---
 <h1>Partícionálás</h1>
 
+<p>Nézzük meg milyen partíciók vannak (Windows 10 alatt) a <a href="https://www.isunshare.com/windows-10/7-ways-to-open-computer-management-in-windows-10.html">Számítógép kezelő</a> segítségével.</p>
+
 <h2>Fájlrendszer</h2>
 <p>Forrás: <a href="http://www.learnlinux.org.za/courses/build/internals/ch08s04.html">Filesystems</a>
 
