skeleton for upcoming sessions

--- a/content/os-in-school/university.html
+++ b/content/os-in-school/university.html
@@ -5,34 +5,34 @@ layout: course
 <p class="audience">egyetemi hallgatók</p>
 <p class="goal"></p>
 
-<h2>Előadás: <a href="history-of-os.html" target="_self">Számítástechnika és operációs rendszerek története</a> (45 min)</h2>
-<!--<p class="overview"></p>
-<ul>
-	<li>hisotry.pdf</li>
-	<li>timelines.pptx</li>
-</ul>-->
-<h3>Gyakorlat: <a href="/files/oprend/requirements.pdf">Követlemények és bevezetés</a> (30 min)</h3>
-<h3>Gyakorlat: <a href="partition.html" target="_self">Particionálás alapjai és elmélete</a> (45 min)</h3>
+<h2>Előadás</h2>
+<p><a href="history-of-os.html" target="_self">Számítástechnika és operációs rendszerek története</a></p>
+<h3>Gyakorlat</h3>
+<p><a href="/files/oprend/requirements.pdf">Követlemények és bevezetés</a><br/>
+<a href="partition.html" target="_self">Particionálás alapjai és elmélete</a></p>
 
-<!--<h2>Virtualizáció</h2>
-<p class="overview"></p>
-<ul>
-	<li>oprendvirtualizacio.pptx</li>
-</ul>
-<h3>Gyakorlat: Készítsünk egy virtuális gépet (45 min)</h3>
+<h2>Előadás</h2>
+<p><a href="virtualization.html" target="_self">Virtualizáció</a><br/>
+</p>
+<h3>Gyakorlat</h3>
+<p><a href="create-vm.html">Készítsünk egy virtuális gépet</a><br/>
+<a href="linux-install.html">Telepítsünk egy Ubuntu (Linux) operációs rendszert (első rész)</a></p>
 
-<h2>Unix alapú operációs rendszerek története (45 min)</h2>
-<p class="overview"></p>
-<ul>
+<h2>Előadás</h2>
+<p>Unix alapú operációs rendszerek története</p>
+<!--<ul>
 	<li>Unix</li>
 	<li>Linux</li>
 	<li>Mac OS X</li>
 	<li>BSD</li>
 	<li>Solaris</li>
-</ul>
-<h3>Gyakorlat: Ubuntu telepítés virtuális gépre (45 min)</h3>
+</ul>-->
+<h3>Gyakorlat</h3>
+<p>Telepítsünk egy Ubuntu (Linux) operációs rendszert (második rész)<br/>
+Ismerkedés a Linuxxal</p>
 
-<h2>Microsoft operációs rendszerek története (45 min)</h2>
+<!--<h2>Előadás</h2>
+<h2>Microsoft operációs rendszerek története</h2>
 <p class="overview"></p>
 <h3>Gyakorlat: Windows 10+ telepítés (45 min)</h3>
 <ul>
