--- a/content/os-in-school/university.html
+++ b/content/os-in-school/university.html
@@ -15,8 +15,8 @@ layout: course
 <p><a href="virtualization.html" target="_self">Virtualizáció</a><br/>
 </p>
 <h3>Gyakorlat</h3>
-<p><a href="create-vm.html">Készítsünk egy virtuális gépet</a><br/>
-<a href="linux-install.html">Telepítsünk egy Ubuntu (Linux) operációs rendszert (első rész)</a></p>
+<p>Készítsünk egy virtuális gépet<br/>
+Telepítsünk egy Ubuntu (Linux) operációs rendszert (első rész)</p>
 
 <h2>Előadás</h2>
 <p>Unix alapú operációs rendszerek története</p>
