--- a/content/os-in-school/university.html
+++ b/content/os-in-school/university.html
@@ -19,14 +19,7 @@ layout: course
 Telepítsünk egy Ubuntu (Linux) operációs rendszert (első rész)</p>
 
 <h2>Előadás</h2>
-<p>Unix alapú operációs rendszerek története</p>
-<!--<ul>
-	<li>Unix</li>
-	<li>Linux</li>
-	<li>Mac OS X</li>
-	<li>BSD</li>
-	<li>Solaris</li>
-</ul>-->
+<p><a href="linux.html">Linux alapú operációs rendszerek története</a></p>
 <h3>Gyakorlat</h3>
 <p>Telepítsünk egy Ubuntu (Linux) operációs rendszert (második rész)<br/>
 Ismerkedés a Linuxxal</p>
