--- a/content/os-in-school/linux.html
+++ b/content/os-in-school/linux.html
@@ -2,6 +2,7 @@
 layout: course
 ---
 <h1>Linux alapú operációs rendszerek története</h1>
+<p>Forrás: <a href="https://en.wikipedia.org/wiki/History_of_Linux">Wikipedia: History of Linux</a></p>
 
 <h2>Előzmények</h2>
 <p>1991: Linus Torvalds 21 évesen elkezd hobbiként írni egy operációs rendszert.</p>
@@ -10,4 +11,17 @@ I'm doing a (free) operating system (just a hobby, won't be big and professional
 I've currently ported bash(1.08) and gcc(1.40), and things seem to work. This implies that I'll get something practical within a few months, and I'd like to know what features most people would want. Any suggestions are welcome, but I won't promise I'll implement them :-)</br>
 Linus (torvalds@kruuna.helsinki.fi)</br>
 PS. Yes - it's free of any minix code, and it has a multi-threaded fs. It is NOT portable (uses 386 task switching etc), and it probably never will support anything other than AT-harddisks, as that's all I have :-(.</br>
-— Linus Torvalds</p>
+- Linus Torvalds</p>
+
+<h2>Linux GNU GPL licensz alatt</h2>
+<p>Először Linus sajét licensz alatt adta ki a Linux kernelt, ami megtiltja a kereskedelmi célú felhasználást. Később (2000) GPLv2 alatt került kiadásra. 2007-ben ezt frissítették GPLv3-ra.</p>
+<p>Sadly, a kernel by itself gets you nowhere. To get a working system you need a shell, compilers, a library etc. These are separate parts and may be under a stricter (or even looser) copyright. Most of the tools used with linux are GNU software and are under the GNU copyleft. These tools aren't in the distribution - ask me (or GNU) for more info.</br>
+- "Notes for linux release 0.01", Linus Torvalds</p>
+
+<h2>Új fejlesztések kora</h2>
+<ul>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+</ul>
