--- a/content/os-in-school/linux.html
+++ b/content/os-in-school/linux.html
@@ -19,6 +19,16 @@ PS. Yes - it's free of any minix code, and it has a multi-threaded fs. It is NOT
 - "Notes for linux release 0.01", Linus Torvalds</p>
 
 <h2>Új fejlesztések kora</h2>
+<h3>Közösség</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MkJxlKD2bjk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h3>Open source szervezetek</h3>
+<ul>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+</ul>
+<h3>Cégek</h3>
 <ul>
   <li></li>
   <li></li>
