--- a/content/os-in-school/linux.html
+++ b/content/os-in-school/linux.html
@@ -21,17 +21,54 @@ PS. Yes - it's free of any minix code, and it has a multi-threaded fs. It is NOT
 <h2>Új fejlesztések kora</h2>
 <h3>Közösség</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/MkJxlKD2bjk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <h3>Open source szervezetek</h3>
+<p>Linux az OSDL-nek dolgozik a Linux kernel fejlesztésen.</p>
 <ul>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
+  <li>Open Source Development Lab</li>
+  <li>Linux Foundation</li>
+  <li>Free Standards Group</li>
 </ul>
+<p>2007-ben az OSDL és a FSG egyesült hogy létrehozzák a Linux Foundation-t.</p>
+
 <h3>Cégek</h3>
 <ul>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
+  <li>Dell</li>
+  <li>IBM</li>
+  <li>Hewlett-Packard</li>
+  <li>Oracle</li>
 </ul>
+
+<h3>Asztali környezetek</h3>
+<ul>
+  <li>KDE</li>
+  <li>Gnome</li>
+  <li>Cinnamon</li>
+  <li>Xfce</li>
+</ul>
+
+<h3>Disztribúciók</h3>
+<a href="https://en.wikipedia.org/wiki/Linux_distribution">Wikipedia: Linux distribution</a>
+<h4>Közismert disztribúciók</h4>
+<ul>
+  <li>Debian</li>
+  <li>Ubuntu</li>
+  <li>Red Hat</li>
+  <li>Suse</li>
+</ul>
+<h4>Könnyűsúlyú változatok</h4>
+<h4>Domain specifikus felhasználás</h4>
+<ul>
+  <li>Routers – for example, targeted by the tiny embedded router distribution OpenWrt</li>
+  <li>Internet of things – for example, targeted by Ubuntu Core</li>
+  <li>Home theater PCs – for example, targeted by KnoppMyth, Kodi (former XBMC) and Mythbuntu</li>
+  <li>Specific platforms – for example, Raspbian targets the Raspberry Pi platform</li>
+  <li>Education – examples are Edubuntu and Karoshi, server systems based on PCLinuxOS</li>
+  <li>Scientific computer servers and workstations – for example, targeted by Scientific Linux</li>
+  <li>Digital audio workstations for music production – for example, targeted by Ubuntu Studio</li>
+  <li>Computer Security, digital forensics and penetration testing – examples are Kali Linux and Parrot Security OS</li>
+  <li>Privacy and anonymity – for example, targeted by Tails</li>
+  <li>Offline use – for example, Endless OS</li>
+  <li>Microsoft's Azure Sphere</li>
+</ul>
+<h4>Android és egyéb nem-GNU kiadások</h4>
