--- a/content/os-in-school/university.html
+++ b/content/os-in-school/university.html
@@ -24,17 +24,12 @@ Telepítsünk egy Ubuntu (Linux) operációs rendszert (első rész)</p>
 <p>Telepítsünk egy Ubuntu (Linux) operációs rendszert (második rész)<br/>
 Ismerkedés a Linuxxal</p>
 
-<!--<h2>Előadás</h2>
-<h2>Microsoft operációs rendszerek története</h2>
-<p class="overview"></p>
-<h3>Gyakorlat: Windows 10+ telepítés (45 min)</h3>
-<ul>
-	<li>telepítő pendrive készítése</li>
-	<li>boot-olás pendriveról</li>
-	<li>telepítés főbb lépései (végrehajtás nélkül)</li>
-</ul>
+<h2>Előadás</h2>
+<p><a href="windows.html">Microsoft operációs rendszerek története</a></p>
+<h3>Gyakorlat</h3>
+<p><a href="win10boot_usb.html">Windows 10 telepítés pendrive-ról</a></p>
 
-<h2>Távoli elérést biztosító megoldások és eszközök (45 min)</h2>
+<!--<h2>Távoli elérést biztosító megoldások és eszközök (45 min)</h2>
 <ul>
 	<li>SSH/SCP</li>
 	<li>SFTP</li>
