--- a/content/os-in-school/windows.html
+++ b/content/os-in-school/windows.html
@@ -2,3 +2,23 @@
 layout: course
 ---
 <h1>Windows operációs rendszerek története</h1>
+<p>Forrás: <a href="https://www.webopedia.com/slideshows/the-history-of-microsoft-operating-systems.html">The History of Microsoft Operating Systems</a></p>
+
+<h2>MS-DOS (Microsoft disk operating system)</h2>
+<p>A Microsoft fejlesztette ki az IBM számára. Sokáig standard operációs rendszernek számított az IBM kompatibilis rendszerekhez. Kezdetekben nagyon hasonlított egy korábbi operációs rendszerre a CP/M-re.</p>
+
+<h2>Windows 1.0 – 3.1 (1985-1992)</h2>
+<p>DOS parancsok helyett rámutatás és kattintás a funkciók eléréséhez. Ablak fogalom bevezetése. Az asztal és az ikonok a 2.0-ás verziótól érhetőek el.</p>
+<p>A 3.0-ás verzióban elérhető a fájl- és nyomtató kezelő valamint a különböző játékok.</p>
+
+<h2>Windows 95, 98, ME</h2>
+<p>DOS alaprendszertűl független verzió. Ez lehetővé tette sok DOS alapú limitáció megszegését. Először kerül támogatásra a 32bit-es rendszer és a plug-n-play. A Windows 98 több új technológia támogatását adta hozzá és bevezette az Active Desktop-ot (böngésző és operációs rendszer integráció).</p>
+
+<h2>Windows NT: Windows NT Server, Windows NT Workstation</h2>
+<p>NT 3.1 - 4.0 (1993-1996): New Technology, 32bit operációs rendszer család, szerverek és munkaállomások számára.</p>
+<p>Windows 2000 (February 2000): üzleti felhasználókat célozza. Létezett belőlle szerver és munkaállomás verzió is.</p>
+<p>Windows Server 2008, ... párhuzamos fejlődése és kiadása.</p>
+
+<h2>Új grafikus irányok</h2>
+<p>Windows XP, 7, Vista újratervezett grafikus felület folyamatosan integrálva az új technológiákat.</p>
+
