--- a/content/teaching.html
+++ b/content/teaching.html
@@ -32,7 +32,7 @@ layout: page
 
 <h3>Rendszerfejlesztés 2. gyakorlat</h3>
 <p>
-<a href="https://drive.google.com/open?id=12tNBhCIo9Ef22xQwhGzDWS2Fv_UeAbZ3">2018 diasorok</a>
+<a href="https://drive.google.com/drive/folders/1PJxSVaw1J_ZeIWIOt6DeXf9ugjRTJdaa?usp=sharing">2019 megosztások</a>
 </p>
 
 <h3>Szkriptnyelvek</h3>
