--- a/content/os-in-school/university.html
+++ b/content/os-in-school/university.html
@@ -29,16 +29,12 @@ Ismerkedés a Linuxxal</p>
 <h3>Gyakorlat</h3>
 <p><a href="win10boot_usb.html">Windows 10 telepítés pendrive-ról</a></p>
 
-<!--<h2>Távoli elérést biztosító megoldások és eszközök (45 min)</h2>
-<ul>
-	<li>SSH/SCP</li>
-	<li>SFTP</li>
-	<li>FTP</li>
-	<li>Samba</li>
-</ul>
-<h3>Gyakorlat: csatlakozzunk a virtuális Ubuntu géphez SSH-val és mozgassunk fájlokat SCP-vel. (45 min)</h3>
+<h2>Előadás</h2>
+<p>Ubuntu Server telepítése</p>
+<h2>Gyakorlat</h2>
+<p><a href="remote.html">Távoli elérést biztosító megoldások és eszközök</a></p>
 
-<h2>Webszerver</h2>
+<!--<h2>Webszerver</h2>
 <h3>Gyakorlat: Készítsünk egy HTTP szervert</h3>
 
 <h2>Speciális operációs rendszerek (45 min)</h2>
