--- a/content/os-in-school/university.html
+++ b/content/os-in-school/university.html
@@ -32,6 +32,7 @@ Ismerkedés a Linuxxal</p>
 <h2>Előadás</h2>
 <p>Ubuntu Server telepítése</p>
 <h2>Gyakorlat</h2>
+<p><a href="virtualbox-network.html">VirtualBox hálózati beállítások</a></p>
 <p><a href="remote.html">Távoli elérést biztosító megoldások és eszközök</a></p>
 
 <!--<h2>Webszerver</h2>
