--- a/content/os-in-school/remote.html
+++ b/content/os-in-school/remote.html
@@ -1,9 +1,14 @@
 ---
 layout: course
 ---
-<h1></h1>
+<h1>Távoli elérést biztosító megoldások és eszközök</h1>
+
+<p>Host-only hálózat</p>
 
 <h2>SSH/SCP</h2>
+<p><a href="https://www.openssh.com/manual.html">OpenSSH server</a><br/>
+<a href="https://help.ubuntu.com/lts/serverguide/openssh-server.html.en">OpenSSH Server - Ubuntu documentation</a></p>
+<p><a href="https://www.putty.org/">PuTTY kliens</a></p>
 
 <h2>SFTP</h2>
 
