--- a/content/os-in-school/remote.html
+++ b/content/os-in-school/remote.html
@@ -3,14 +3,20 @@ layout: course
 ---
 <h1>Távoli elérést biztosító megoldások és eszközök</h1>
 
-<p>Host-only hálózat</p>
+<h2>Hálózat konfiguráció</h2>
+<p>1. hálózati kártya: NAT</p> 
+<p>2. hálózati kártya: Host-only hálózat<br/>
+<code>ifconfig -a</code>
+<code>vim /etc/netplan</code></p>
+
 
 <h2>SSH/SCP</h2>
 <p><a href="https://www.openssh.com/manual.html">OpenSSH server</a><br/>
 <a href="https://help.ubuntu.com/lts/serverguide/openssh-server.html.en">OpenSSH Server - Ubuntu documentation</a></p>
 <p><a href="https://www.putty.org/">PuTTY kliens</a></p>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/EBvxbuhDKBw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h2>SFTP</h2>
+<p><a href="https://winscp.net/eng/index.php">WinSCP</a></p>
 
 <h2>Samba</h2>
 
