--- a/content/os-in-school/remote.html
+++ b/content/os-in-school/remote.html
@@ -14,7 +14,7 @@ layout: course
             dhcp4: true
         enp0s8:
             dhcp4: true
-    version: 2</code>
+    version: 2</code></pre>
 <pre class="code"><code>netplan apply</code></pre></p>
 
 
