--- a/content/os-in-school/remote.html
+++ b/content/os-in-school/remote.html
@@ -26,7 +26,7 @@ layout: course
 <p><a href="https://winscp.net/eng/index.php">WinSCP</a></p>
 
 <h2>SFTP</h2>
+<p><a href="https://linuxconfig.org/how-to-setup-sftp-server-on-ubuntu-18-04-bionic-beaver-with-vsftpd">SFTP server telepítése</a></p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/QcKYFEgfV-I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <h2>Samba</h2>
-
-<h2>FTP</h2>
