--- a/content/pgp/secondary-4h.html
+++ b/content/pgp/secondary-4h.html
@@ -182,7 +182,7 @@ easy_install neo4j-driver
 <p>Python alapok</p>
 
 <h2>Példák</h2>
-<p>Eddig elkészült <a href="https://drive.google.com/file/d/1xDaxxjzeTCMK076d7sm9r8cuIRLnVRrw/view?usp=sharing">program</a></p>
+<p>Eddig elkészült <a href="https://drive.google.com/open?id=1IyTVRu1tDzsGkWwZYpRS65z-izCJq7uC">program</a></p>
 
 <h2>Szépen formázott kiiratás és beolvasás</h2>
 <p>Parancssorban nézzük át hogyan működnek az egyes részek.</p>
