--- a/content/os-in-school/remote.html
+++ b/content/os-in-school/remote.html
@@ -28,5 +28,8 @@ layout: course
 <h2>SFTP</h2>
 <p><a href="https://linuxconfig.org/how-to-setup-sftp-server-on-ubuntu-18-04-bionic-beaver-with-vsftpd">SFTP server telepítése</a></p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/QcKYFEgfV-I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<pre class="code"><code>vboxmanage dhcpserver add --netname intnet --ip 10.10.0.1 --netmask 255.255.0.0 --lowerip 10.10.10.1 --upperip 10.10.10.255 --enable</code></pre>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/lhOY-KilEeE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
 <h2>Samba</h2>
