--- a/content/os-in-school/remote.html
+++ b/content/os-in-school/remote.html
@@ -38,6 +38,6 @@ layout: course
 <h3>Kliens</h3>
 <pre class="code"><code>sudo apt install net-tools</code></pre>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/QcKYFEgfV-I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<pre class="code"><code>sftp sftpuser@10.10.10.1</code></pre>
 
 <h2>Samba</h2>
