--- a/content/os-in-school/university.html
+++ b/content/os-in-school/university.html
@@ -35,6 +35,11 @@ Ismerkedés a Linuxxal</p>
 <p><a href="virtualbox-network.html">VirtualBox hálózati beállítások</a></p>
 <p><a href="remote.html">Távoli elérést biztosító megoldások és eszközök</a></p>
 
+<h2>Előadás</h2>
+<p><a href="docker.html">Docker alpismeretek</a></p>
+<h2>Gyakorlat</h2>
+<p>Docker bemutatása a <a href="https://projects.eclipse.org/projects/technology.scava">SCAVA</a> ipari projekten keresztül</p>
+
 <!--<h2>Webszerver</h2>
 <h3>Gyakorlat: Készítsünk egy HTTP szervert</h3>
 
