--- a/content/os-in-school/docker.html
+++ b/content/os-in-school/docker.html
@@ -5,6 +5,8 @@ layout: course
 
 <h2>Docker alapok</h2>
 
+<img src="docker_architecture.png" />
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/aLipr7tTuA4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <h2>Egy valós példa: Scava</h2>
