--- a/content/os-in-school/docker.html
+++ b/content/os-in-school/docker.html
@@ -5,11 +5,13 @@ layout: course
 
 <h2>Docker alapok</h2>
 
-<img src="docker_architecture.png" style="width: 60%"/><br/>
 <img src="docker_vs_vm.png" style="width: 60%"/><br/>
+<img src="docker_architecture.png" style="width: 60%"/><br/>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/aLipr7tTuA4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <h2>Egy valós példa: Scava</h2>
 
 <p><a href="https://github.com/crossminer/scava-deployment/tree/dev">Docker configuration files for the deployment of Scava platform</a></p>
+<p><a href="https://github.com/crossminer/scava-deployment/blob/dev/KB/Dockerfile">példa docker fájl</a></p>
+<p><a href="https://github.com/crossminer/scava-deployment/blob/dev/docker-compose-build.yml">példa compose fájl</a></p>
