--- a/content/os-in-school/university.html
+++ b/content/os-in-school/university.html
@@ -40,9 +40,10 @@ Ismerkedés a Linuxxal</p>
 <h2>Gyakorlat</h2>
 <p>Docker bemutatása a <a href="https://projects.eclipse.org/projects/technology.scava">SCAVA</a> ipari projekten keresztül</p>
 
-<!--<h2>Webszerver</h2>
-<h3>Gyakorlat: Készítsünk egy HTTP szervert</h3>
+<h2>Előadás és Gyakorlat</h2>
+<p><a href="lamp.html">LAMP</a></p>
 
+<!--
 <h2>Speciális operációs rendszerek (45 min)</h2>
 <p class="overview"></p>
 <ul>
