--- a/content/os-in-school/university.html
+++ b/content/os-in-school/university.html
@@ -40,7 +40,9 @@ Ismerkedés a Linuxxal</p>
 <h2>Gyakorlat</h2>
 <p>Docker bemutatása a <a href="https://projects.eclipse.org/projects/technology.scava">SCAVA</a> ipari projekten keresztül</p>
 
-<h2>Előadás és Gyakorlat</h2>
+<h2>Előadás</h2>
+<p><a href="https://en.wikipedia.org/wiki/Filesystem_Hierarchy_Standard">Filesystem Hierarchy Standard</a></p>
+<h2>Gyakorlat</h2>
 <p><a href="lamp.html">LAMP</a></p>
 
 <!--
