Update and rename university.html to index.html

--- a/content/os-in-school/index.html
+++ b/content/os-in-school/index.html
@@ -45,13 +45,23 @@ Ismerkedés a Linuxxal</p>
 <h2>Gyakorlat</h2>
 <p><a href="lamp.html">LAMP</a></p>
 
-<!--
-<h2>Speciális operációs rendszerek (45 min)</h2>
-<p class="overview"></p>
+<h2>Előadás</h2>
+<p>Ismétlés és összefoglalás</p>
+<h2>Gyakorlat</h2>
+<p>Konzultáció</p>
+
+<h2>Előadás és Gyakorlat</h2>
+<p>Zárthelyi dolgozat</p>
+
+<h2>Előadás és Gyakorlat</h2>
+<p>Projekt bemutatás</p>
+
+<h2>Előadás</h2>
+<p>Speciális operációs rendszerek
 <ul>
 	<li>Android</li>
 	<li>Rasberry PI</li>
 	<li>Arduino</li>
 	<li>NodeMCU</li>
 </ul>
-<h3>Gyakorlat: Konzultáció és Microvezérlők</h3>-->
+</p>
